# primetrade-mlops-batch

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.yaml  data.csv  metrics.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: test.yml
pipeline_app/: __init__.py  core.py  hashing.py
pipeline_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
