[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
ignore_missing_imports = true
exclude = ["^\\.kilo/", "^,github/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "primetrade-ml"
version = "1.0.0"
description = "Production-grade MLOps batch pipeline"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["pipeline_app"]